@@ -99,18 +99,18 @@ function SpecChange
 	# gpg key can not be provided
 	sedscript='s/\(^Requires:[[:space:]]*rpmlib(.*\)/#\1/;s/\(^Provides:[[:space:]]*gpg(.*\)/#\1/'
 
-	if [ -n $autorequire ]
+	if [ -n "$autorequire" ]
 	then
 		sedscript="${sedscript};s/^AutoReq/#AutoReq/;s/^%undefine __find_requires/#undefine __find_requires/;s/^Require/#Require/"
 	fi
 
-	if [ -n $autoprovide ]
+	if [ -n "$autoprovide" ]
 	then
 		sedscript="${sedscript};s/^AutoProv/#AutoProv/;s/^%undefine __find_provides/#undefine __find_provides/;s/^Provide/#Provide/"
 	fi
 
 	# apply filter
-	sed "$sedscript"
+	sed -e $sedscript
 }
 ###############################################################################
 # build general tags
