@@ -1,3 +1,6 @@
+* Mon May 24 2004 <gerbier@users.sourceforge.net> 1.4.6-4
+- fix a bug on --autoprovide/--autorequire
+
 * Mon May 24 2004 <valery_reznic@users.sourceforge.net> 1.4.6-4
 - eliminate 'expr' usage
 - add RPMREBUILD_TMDDIR environment variable.  With default ~/.tmp/rpmrebuild
